@@ -442,7 +442,6 @@ int MoviePNG(PyMOLGlobals *G,char *prefix,int save,int start,int stop)
       MovieFlushCommands(G);
 		i=MovieFrameToImage(G,a);
       VLACheck(I->Image,ImageType,i);
-      printf("here %d\n",a);
       if((a>=start)&&(a<=stop)) { /* only render frames in the specified interval */
         if(!I->Image[i]) {
           SceneMakeMovieImage(G);
