@@ -197,7 +197,8 @@ void ExecutiveSymExp(PyMOLGlobals *G,char *name,char *obj,char *sele,float cutof
 int ExecutiveGetExtent(PyMOLGlobals *G,char *name,float *mn,float *mx,int transformed,int state,int weighted);
 int ExecutiveGetCameraExtent(PyMOLGlobals *G,char *name,float *mn,float *mx,int transformed,int state);
 int ExecutiveSeleToObject(PyMOLGlobals *G,char *name,char *s1,
-                           int source,int target,int discrete,int zoom);
+                          int source,int target,int discrete,int zoom,
+                          int quiet);
 PyObject *ExecutiveSeleToChemPyModel(PyMOLGlobals *G,char *s1,int state);
 void ExecutiveInvalidateRep(PyMOLGlobals *G,char *name,int rep,int level);
 void ExecutiveFlag(PyMOLGlobals *G,int flag,char *s1,int action,int quiet);
@@ -268,7 +269,7 @@ int ***ExecutiveGetBondPrint(PyMOLGlobals *G,char *name,int max_bond,int max_typ
 int ExecutiveSetCrystal(PyMOLGlobals *G,char *sele,float a,float b,float c,
                          float alpha,float beta,float gamma,char *sgroup);
 int ExecutiveGetSession(PyMOLGlobals *G,PyObject *dict);
-int ExecutiveSetSession(PyMOLGlobals *G,PyObject *session);
+int ExecutiveSetSession(PyMOLGlobals *G,PyObject *session,int quiet);
 
 ObjectMap *ExecutiveFindObjectMapByName(PyMOLGlobals *G,char *name);
 
